# hpc-game-of-life-mpi

./: .gitignore  1dtopologie.c  CMakeLists.txt  README.md  game.c  game.h  kernel.c  kernel.h  main.c  run1.sh  run2.sh  run4.sh  vec2.c  vec2.h  vtk.c  vtk.h
